Fix collapsed navbar button color

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -60,6 +60,7 @@ body {
       text-align: left;
       .navbar-toggle {
         border-color: $link_color;
+        background-color: black;
         .icon-bar {
           background-color: $link_color;
         }
